--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@playform/overbrowser",
 	"version": "0.0.1",
 	"private": true,
-	"description": "🔍 Overbrowser —",
+	"description": "Overbrowser 🔍",
 	"keywords": [
 		"playform"
 	],
